# redis-streams-python-consumer-service

./: README.md  consumer.py  pyproject.toml
docker_compose/: redis.yaml
