[tool.poetry]
name = "redis-streams-python-consumer-service"
version = "0.1.0"
description = "Example of realisation python Redis Streams consumer"
authors = ["Nikita Kapralov <nikkapral1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
